# goofish-cli

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  compliance.md  mcp-setup.md
examples/: README.md  publish_from_folder.py  watch_to_autoreply.sh
skills/goofish-overview/: SKILL.md
skills/goofish-overview/references/: accounts.md  mcp-tools-index.md  xianyu-concepts.md
skills/goofish-publish-item/: SKILL.md
skills/goofish-publish-item/references/: category-selection.md  common-pitfalls.md  image-checklist.md  title-formula.md
skills/goofish-reply-buyer/: SKILL.md
skills/goofish-reply-buyer/references/: bargain-ladder.md  intent-classification.md  tone-guide.md
skills/goofish-risk-guard/: SKILL.md
skills/goofish-risk-guard/references/: external-contact-keywords.md  forbidden-words.md  publish-red-lines.md  x5sec-recovery.md
skills/goofish-shop-diagnosis/: SKILL.md
skills/goofish-shop-diagnosis/references/: diagnosis-workflow.md  rank-factors.md  traffic-drop-causes.md
src/goofish_cli/: __init__.py  cli.py  mcp_server.py
src/goofish_cli/core/: __init__.py  browser.py  browser_cookie.py  errors.py  guard.py  limiter.py  mtop.py  output.py  qr_login.py  refresh.py  registry.py  session.py  sign.py  (+3 more)
tests/: test_auth_login.py  test_browser_cookie.py  test_guard.py  test_item_view.py  test_limiter.py  test_list_chats.py  test_mtop.py  test_publish_payload.py  test_qr_login.py  test_refresh.py  test_registry.py  test_search.py  test_session_bootstrap.py  test_sign.py  test_skills_install.py  test_ws_codec.py
(+16 files in other folders)
